# All binary targets will get this list of configs by default.
_shared_binary_target_configs = [
  "//gn:compiler_defaults",
  "//gn:llvm_code",
]

# Apply that default list to the binary target types.
set_defaults("executable") {
  configs = _shared_binary_target_configs
}
set_defaults("static_library") {
  configs = _shared_binary_target_configs
}
set_defaults("shared_library") {
  configs = _shared_binary_target_configs
}
set_defaults("source_set") {
  configs = _shared_binary_target_configs
}

set_default_toolchain("//gn/toolchain:cc")
