import("//llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":ELF" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("ELF") {
  output_name = "lldELF"
  configs += [ "//gn:lld_code" ]
  deps = [
    ":Options",
    "//lld/Common",
    "//llvm/include/llvm/IR:tablegen",
    "//llvm/lib/BinaryFormat",
    "//llvm/lib/DebugInfo/DWARF",
    "//llvm/lib/IR",
    "//llvm/lib/LTO",
    "//llvm/lib/MC",
    "//llvm/lib/Object",
    "//llvm/lib/Option",
    "//llvm/lib/Support",
    "//llvm/lib/Target:TargetsToBuild",
  ]
  include_dirs = [ "." ]
  sources = [
    "AArch64ErrataFix.cpp",
    "Arch/AArch64.cpp",
    "Arch/AMDGPU.cpp",
    "Arch/ARM.cpp",
    "Arch/AVR.cpp",
    "Arch/Hexagon.cpp",
    "Arch/Mips.cpp",
    "Arch/MipsArchTree.cpp",
    "Arch/PPC.cpp",
    "Arch/PPC64.cpp",
    "Arch/SPARCV9.cpp",
    "Arch/X86.cpp",
    "Arch/X86_64.cpp",
    "CallGraphSort.cpp",
    "Driver.cpp",
    "DriverUtils.cpp",
    "EhFrame.cpp",
    "Filesystem.cpp",
    "GdbIndex.cpp",
    "ICF.cpp",
    "InputFiles.cpp",
    "InputSection.cpp",
    "LTO.cpp",
    "LinkerScript.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "OutputSections.cpp",
    "Relocations.cpp",
    "ScriptLexer.cpp",
    "ScriptParser.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "SyntheticSections.cpp",
    "Target.cpp",
    "Thunks.cpp",
    "Writer.cpp",
  ]
}
