group("unittests") {
  deps = [
    "ADT:ADTTests",
    "Analysis:AnalysisTests",
    "AsmParser:AsmParserTests",
    "BinaryFormat:BinaryFormatTests",
    "Bitcode:BitcodeTests",
    "CodeGen:CodeGenTests",
    "CodeGen/GlobalISel:GlobalISelTests",
    "DebugInfo/CodeView:DebugInfoCodeViewTests",
    "DebugInfo/DWARF:DebugInfoDWARFTests",
    "DebugInfo/MSF:DebugInfoMSFTests",
    "DebugInfo/PDB:DebugInfoPDBTests",
    "Demangle:DemangleTests",
    "ExecutionEngine:ExecutionEngineTests",
    "ExecutionEngine/MCJIT:MCJITTests",
    "ExecutionEngine/Orc:OrcJITTests",
    "FuzzMutate:FuzzMutateTests",
    "IR:IRTests",
    "LineEditor:LineEditorTests",
    "MC:MCTests",

    # FIXME: This too has a duplicate main() function.
    # "MI:MITests",
    "Object:ObjectTests",
    "ObjectYAML:ObjectYAMLTests",
    "Option:OptionTests",

    # FIXME: PassesTests
    "ProfileData:ProfileDataTests",
    "Support:SupportTests",

    # FIXME: Support/DynamicLibrary
    # FIXME: Target/AArch64 -- need to check if target enabled
    "Transforms/IPO:IPOTests",
    "Transforms/Scalar:ScalarTests",
    "Transforms/Utils:UtilsTests",
    "XRay:XRayTests",

    # FIXME: This too has a duplicate main() function.
    # "tools/llvm-cfi-verify:CFIVerifyTests",
  ]
  testonly = true
}
