static_library("AST") {
  output_name = "clangAST"
  configs += [ "//gn:clang_code" ]
  deps = [
    "//clang/include/clang/AST:DeclNodes",
    "//clang/lib/Basic",
    "//clang/lib/Lex",
    "//llvm/lib/BinaryFormat",
    "//llvm/lib/Support",
  ]
  sources = [
    "APValue.cpp",
    "ASTConsumer.cpp",
    "ASTContext.cpp",
    "ASTDiagnostic.cpp",
    "ASTDumper.cpp",
    "ASTImporter.cpp",
    "ASTStructuralEquivalence.cpp",
    "ASTTypeTraits.cpp",
    "AttrImpl.cpp",
    "CXXInheritance.cpp",
    "Comment.cpp",
    "CommentBriefParser.cpp",
    "CommentCommandTraits.cpp",
    "CommentLexer.cpp",
    "CommentParser.cpp",
    "CommentSema.cpp",
    "DataCollection.cpp",
    "Decl.cpp",
    "DeclarationName.cpp",
    "DeclBase.cpp",
    "DeclCXX.cpp",
    "DeclFriend.cpp",
    "DeclGroup.cpp",
    "DeclObjC.cpp",
    "DeclOpenMP.cpp",
    "DeclPrinter.cpp",
    "DeclTemplate.cpp",
    "Expr.cpp",
    "ExprClassification.cpp",
    "ExprConstant.cpp",
    "ExprCXX.cpp",
    "ExprObjC.cpp",
    "ExternalASTMerger.cpp",
    "ExternalASTSource.cpp",
    "InheritViz.cpp",
    "ItaniumCXXABI.cpp",
    "ItaniumMangle.cpp",
    "Mangle.cpp",
    "MicrosoftCXXABI.cpp",
    "MicrosoftMangle.cpp",
    "NestedNameSpecifier.cpp",
    "NSAPI.cpp",
    "ODRHash.cpp",
    "OpenMPClause.cpp",
    "ParentMap.cpp",
    "QualTypeNames.cpp",
    "RawCommentList.cpp",
    "RecordLayout.cpp",
    "RecordLayoutBuilder.cpp",
    "SelectorLocationsKind.cpp",
    "Stmt.cpp",
    "StmtCXX.cpp",
    "StmtIterator.cpp",
    "StmtObjC.cpp",
    "StmtOpenMP.cpp",
    "StmtPrinter.cpp",
    "StmtProfile.cpp",
    "StmtViz.cpp",
    "TemplateBase.cpp",
    "TemplateName.cpp",
    "Type.cpp",
    "TypeLoc.cpp",
    "TypePrinter.cpp",
    "VTableBuilder.cpp",
    "VTTBuilder.cpp",
  ]
}
